# grid-hackathon-server

./: .env.tmpl  .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
config/: entrypoint.sh  uwsgi.ini
grid3_hackserver/: __init__.py  api.py  client.py  common.py  config.py  resource.py  service.py  swagger.py  wsgi.py
nginx/: Dockerfile
nginx/conf/: hackaton.conf
scripts/: deploy.sh  run_tests.sh
terraform/prod/: main.tf  variables.tf
terraform/prod/state/: main.tf  variables.tf
tests/: conftest.py  test_client.py  test_grid3_hackserver.py  test_service.py
