[tool.poetry]
name = "grid3-hackserver"
version = "0.1.0"
description = "Proxy server providing RESTful API for querying GRID GeoServer"
authors = ["Abdul-Hakeem Shaibu <hkmshb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
flask-api = "^1.0"
flask-cli = "^0.4.0"
furl = "^2.0"
requests = "^2.20"
flasgger = "^0.9.1"
flask-limiter = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
